apps/rss/rsshub/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    app: rsshub-ingress
  name: rsshub
  namespace: rss
spec:
  rules:
    - host: rsshub.int.kyledev.co
      http:
        paths:
          - backend:
              service:
                name: rsshub
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - rsshub.int.kyledev.co
      secretName: rsshub-kyledev-tls-prod
